fix image cutoff on about page

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -213,7 +213,7 @@ header {
   z-index: 5; }
   .about-container .header-container {
     width: 100%;
-    margin-bottom: 20px; }
+    margin-bottom: 10px; }
   .about-container .info-container {
     display: flex;
     justify-content: center; }
