--- a/src/styles/partials/_about.scss
+++ b/src/styles/partials/_about.scss
@@ -8,7 +8,7 @@
 
     .header-container {
         width: 100%;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
     }
 
     .info-container {
